# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seedtray"
version = "0.0.1"
description = "Run AI experiments"
readme = "README.md"
authors = [{ name = "MJ Berends"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["ml", "ai", "experimentation", "data-science"]
dependencies = [
    "numpy = 1.24.4",
    "torch = 2.0.1",
    "torchvision = 0.15.2",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/approximatelylinear/seedtray"
